name:                nstate
version:             0.2.0.0
synopsis:            Nondeterministic State monad
description:         Nondeterministic State monad
license:             BSD3
license-file:        LICENSE
author:              Stuart A. Kurtz
maintainer:          stuart@cs.uchicago.edu
copyright:           © 2013, Stuart A. Kurtz
category:            Control
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Control.Monad.NState
  -- other-modules:       
  build-depends:       base ==4.6.*, mtl ==2.1.*
