name:                nstate
version:             0.2.0.4
synopsis:            Nondeterministic State monad
description:         Nondeterministic State monad
license:             BSD3
license-file:        LICENSE
author:              Stuart A. Kurtz
maintainer:          stuart@cs.uchicago.edu
copyright:           © 2013-2017, Stuart A. Kurtz
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules   : Control.Monad.NState
  build-depends     : base ==4.10.*, mtl ==2.2.*
  default-language  : Haskell2010
  ghc-options       : -Wall
